@@ -1,12 +1,10 @@
 package org.safehaus.penrose.util;
 
-import sun.misc.BASE64Encoder;
-import sun.misc.BASE64Decoder;
-
 import java.math.BigInteger;
 
 import org.slf4j.LoggerFactory;
 import org.slf4j.Logger;
+import org.bouncycastle.util.encoders.Base64;
 
 /**
  * @author Endi S. Dewata
@@ -28,8 +26,7 @@ public class BinaryUtil {
         String string;
 
         if (BASE64.equals(encoding)) {
-            BASE64Encoder enc = new BASE64Encoder();
-            string = enc.encode(bytes);
+            string = new String(Base64.encode(bytes));
 
         } else if (BIG_INTEGER.equals(encoding)) {
             string = new BigInteger(1, bytes).toString(16);
@@ -52,8 +49,7 @@ public class BinaryUtil {
         byte[] bytes;
 
         if (BASE64.equals(encoding)) {
-            BASE64Decoder decoder = new BASE64Decoder();
-            bytes = decoder.decodeBuffer(string);
+            bytes = Base64.decode(string);
 
         } else if (BIG_INTEGER.equals(encoding)) {
             BigInteger bigInteger = new BigInteger(string, 16);
